chore: apply OpenRewrite patch