@@ -25,7 +25,7 @@ public class UndefinedCoalescingExpression extends BinaryExpression<Object> {
 
     @Override
     public String toString() {
-        return String.format("%s ?? %s", getLeftExpression(), getRightExpression());
+        return "%s ?? %s".formatted(getLeftExpression(), getRightExpression());
     }
 
 }
