@@ -4,7 +4,6 @@ import org.junit.jupiter.api.Test;
 
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 
@@ -13,12 +12,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 class PluginScannerTest {
     @Test
     void scanPlugins() throws URISyntaxException {
-        Path plugins = Paths.get(Objects.requireNonNull(PluginScannerTest.class.getClassLoader().getResource("plugins")).toURI());
+        Path plugins = Path.of(Objects.requireNonNull(PluginScannerTest.class.getClassLoader().getResource("plugins")).toURI());
 
         PluginScanner pluginScanner = new PluginScanner(PluginScannerTest.class.getClassLoader());
         List<RegisteredPlugin> scan = pluginScanner.scan(plugins);
 
-        assertThat(scan.size()).isEqualTo(1);
+        assertThat(scan).hasSize(1);
         assertThat(scan.getFirst().getManifest().getMainAttributes().getValue("X-Kestra-Group")).isEqualTo("io.kestra.plugin.templates");
     }
 
